feat: test with inner scroll

--- a/index.html
+++ b/index.html
@@ -33,10 +33,57 @@
         <ul class="main-task-pill">
           <li>
             <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
             <span class="task-advance">0%</span>
           </li>
           <li>
             <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
+            <span class="task-advance">0%</span>
+          </li>
+          <li>
+            <span class="main-task-name">Mi tarea</span>
+            <span class="main-task-description">Descripción</span>
             <span class="task-advance">0%</span>
           </li>
         </ul>
