feat: improve in view and data rendering

--- a/index.html
+++ b/index.html
@@ -19,73 +19,18 @@
         <h1>Task Manager</h1>
       </section>
       <nav class="main-nav">
-        <ul>
+        <ul id="main-nav-pills">
+          <li>Domingo</li>
           <li>Lunes</li>
           <li>Martes</li>
           <li>Miércoles</li>
           <li>Jueves</li>
           <li>Viernes</li>
           <li>Sábado</li>
-          <li>Domingo</li>
         </ul>
       </nav>
       <section class="main-body-section">
-        <ul class="main-task-pill">
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
-          <li>
-            <span class="main-task-name">Mi tarea</span>
-            <span class="main-task-description">Descripción</span>
-            <span class="task-advance">0%</span>
-          </li>
+        <ul id="main-task-list-container" class="main-task-pill">
         </ul>
       </section>
     </main>
