--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <button id="new-task-btn" class="action-footer-btn">+</button>
     </section>
     <div class="modal-container" id="main-modal">
-      <section class="modal-content">
+      <!-- MODAL PRINCIPAL -->
+      <section class="modal-content" id="main-form-modal-section">
         <h2>Añadir tarea global</h2>
         <form class="main-modal-form" onsubmit="saveMainTask()"">
         <label>Nombre de la tarea</label>
@@ -65,6 +66,22 @@
           </button>
           <button class="submit-btn" type="submit">Añadir</button>
         </section>
+        </form>
+      </section>
+      <!-- MODAL DE CHECKLISTS -->
+      <section class="modal-content" id="task-form-modal-section">
+        <h2>Añadir tareas para esta lista</h2>
+        <form class="main-modal-form" onsubmit="">
+        <section class="modal-btn-container">
+          <button id="main-modal-cancel-btn" class="cancel-btn">
+            Cancelar
+          </button>
+          <button id="main-modal-cancel-btn" class="cancel-btn">
+            Guardar
+          </button>
+          <button class="submit-btn" type="submit">Añadir</button>
+        </section>
+        </form>
       </section>
     </div>
     <script src="assets/js/index.js"></script>
