feat: bugfixes and subtask counter feature in main tasks

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </form>
       </section>
       <!-- MODAL DE CHECKLISTS -->
-      <section class="modal-content" >
+      <section id="task-form-modal-section" class="modal-content" >
         <h2>Añadir tareas para esta lista</h2>
-        <form id="task-form-modal-section" class="task-modal-form" onsubmit="saveSubtasks()">
+        <form class="task-modal-form" onsubmit="saveSubtasks()">
           <section id="form-section-container" class="subtask-form-section-container">
 
           </section>
